# piano-falling-notes

./: .gitignore  AGENTS.md  pyproject.toml
config/: default.yaml
docs/: CHANGELOG.md  DESIGN.md
src/piano_falling_notes/: AGENTS.md  __main__.py  cli.py
src/piano_falling_notes/core/: AGENTS.md  config.py  generator.py  renderer.py
src/piano_falling_notes/export/: AGENTS.md  audio.py  video_writer.py
src/piano_falling_notes/parser/: AGENTS.md  models.py  musicxml_parser.py
src/piano_falling_notes/rendering/: AGENTS.md  colors.py  effects.py  keyboard.py  layout.py  notes.py  themes.py
src/piano_falling_notes/rendering/effects/: AGENTS.md  __init__.py  ambient.py  burst.py  particles.py
src/piano_falling_notes/timeline/: AGENTS.md  builder.py  models.py  time_index.py
src/piano_falling_notes/utils/: AGENTS.md  piano_keys.py
src/piano_falling_notes/web/: AGENTS.md  app.py
src/piano_falling_notes/web/templates/: index.html
